# rag-ai-project

./: .gitignore  main.py  pyproject.toml
src/config/: settings.py
src/core/: bedrock_client.py  embedding.py  llm.py
